--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </ul>
                 <div class="container-btn">
                     <div class="item-btn">
-                        <a href="#contact"><button class="btn-segundario" type="submit">GET STARTED</button></a>
+                        <a href="#contact"><button class="btn-segundario" type="submit">GET STARTED </button></a>
                     </div>
                 </div>
             </div>
@@ -72,9 +72,13 @@
                             empower your team? Complete the form below and let's explore how I can contribute to your
                             company's success with designs that capture attention and increase conversion.</p>
                         <div class="d-flex flex-column flex-lg-row align-items-center">
+                            <button class="btn-primario">
+                                <span>Lets connect</span>
+                                <span class="material-symbols-outlined">
+                                    arrow_outward
+                                </span>
+                            </button>
 
-
-                            <a href="#contact"><button class="btn-primario" type="button">Let's connect</button></a>
 
 
                         </div>
