--- a/index.html
+++ b/index.html
@@ -72,12 +72,10 @@
                             empower your team? Complete the form below and let's explore how I can contribute to your
                             company's success with designs that capture attention and increase conversion.</p>
                         <div class="d-flex flex-column flex-lg-row align-items-center">
-                            <button class="btn-primario">
-                                <span>Lets connect</span>
-                                <span class="material-symbols-outlined">
-                                    arrow_outward
-                                </span>
-                            </button>
+                            <a href="#contact" class="btn-primario">Let's connect<span class="link material-symbols-outlined">
+                                   arrow_outward
+                            </span>
+                        </a> 
 
 
 
