act foto perfil

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="container-space col-lg-6">
                     <div class="item-space-image">
-                        <img class="Image-space" src="assets/img/spaceman.png" width="100%" alt="Image">
+                        <img class="Image-hero" src="assets/img/Image-hero.png" width="100%" alt="Image">
                     </div>
 
                     <!--Socialmedia iconos-->
