--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
-                    class="navbar-toggler-icon"></span></button>
+                    class="navbar-toggler-icon"></span>
+            </button>
+
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
                     <li class="item-nav"><a class="nav-link" href="#home">Home</a></li>
@@ -98,7 +100,8 @@
                         </div>
                         <div class="item-social-media-icon">
                             <!--whatsapp-->
-                            <a href="https://api.whatsapp.com/send?phone=351932902300" target="new" class="item-social-media-icon">
+                            <a href="https://api.whatsapp.com/send?phone=351932902300" target="new"
+                                class="item-social-media-icon">
                                 <svg viewBox="0 0 24 24" fill="none" height="35" width="35"
                                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                     class="w-6 h-6 text-gray-800 dark:text-white icon-social-media">
@@ -123,7 +126,8 @@
                         </div>
                         <div class="item-social-media-icon">
                             <!--Linkedin-->
-                            <a href="https://www.linkedin.com/in/juan-sebastian-salgado" target="new" class="icon-social-media">
+                            <a href="https://www.linkedin.com/in/juan-sebastian-salgado" target="new"
+                                class="icon-social-media">
                                 <i class="bi bi-linkedin"></i>
                             </a>
                         </div>
@@ -282,7 +286,8 @@
                     </svg>
                     Our friends & partners
                 </h2><br>
-                <P class="lead fw-normal parraphs-card mb-0"> Some brands that’ve tasted the goodness. You might’ve heard of some of these.</P>
+                <P class="lead fw-normal parraphs-card mb-0"> Some brands that’ve tasted the goodness. You might’ve
+                    heard of some of these.</P>
             </div>
         </div>
     </section>
