--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
 
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.svg" />
-
 </head>
 
 <body id="top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark nav fixed-top">
         <div class="container px-5">
-            <a href="#home">
+            <a href="index.html">
                 <img class="logo" src="assets/favicon.svg" alt="" width="40" height="40"></a>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
@@ -49,7 +48,7 @@
 
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
-                    <li class="item-nav"><a class="nav-link" href="#home">Home</a></li>
+                    <li class="item-nav"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="item-nav"><a class="nav-link" href="#about">About</a></li>
                     <li class="item-nav"><a class="nav-link" href="#tools">Portfolio</a></li>
                 </ul>
@@ -270,6 +269,7 @@
                 </svg>
             </div>
         </div>
+
         <!--card seccion tools-->
 
         <div class="container-card-tools">
@@ -291,8 +291,6 @@
             </div>
         </div>
     </section>
-
-
     <!-- Portfolio Grid-->
     <section class="page-section" id="portfolio">
         <div class="container-grid">
@@ -301,8 +299,8 @@
                 <p class="lead fw-normal text-white-50 mb-4">In this journey, I have developed and contributed to
                     different creative projects.</p>
             </div>
-            <!-- Portfolio item 1-->
-            <a class="cards" href="#home">
+            <!-- Portfolio  Web design -->
+            <a class="cards" href="web-design.html">
                 <div class="container-portfolio">
                     <div class="container-card">
                         <div class="container-icon">
@@ -311,7 +309,7 @@
                             </span>
                         </div>
                         <div class="item-card-title">
-                            <h2 class="title-card">Digital Design</h2>
+                            <h2 class="title-card">Web Design</h2>
                         </div>
                         <div class="item-card-text">
                             <p class="text-card">User interface (UI) and user experience (UX)</p>
@@ -319,7 +317,7 @@
                         </div>
                     </div>
             </a>
-            <!-- Portfolio item 2-->
+            <!-- Portfolio Marketing and Advertising -->
             <a class="cards" href="#home">
                 <div class="container-card">
 
@@ -338,8 +336,8 @@
 
                 </div>
             </a>
-            <!-- Portfolio item 3-->
-            <a class="cards" href="#home">
+            <!-- Portfolio Branding and Corporate Identity-->
+            <a class="cards" href="visual-identity.html">
                 <div class="container-card">
                     <div class="container-icon">
                         <span class="iconos material-symbols-outlined">
