--- a/visual-identity.html
+++ b/visual-identity.html
@@ -48,8 +48,8 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
                     <li class="item-nav"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="item-nav"><a class="nav-link" href="#about">About</a></li>
-                    <li class="item-nav"><a class="nav-link" href="#tools">Portfolio</a></li>
+                    <li class="item-nav"><a class="nav-link" href="index.html#about">About</a></li>
+                    <li class="item-nav"><a class="nav-link" href="index.html#tools">Portfolio</a></li>
                 </ul>
                 <div class="container-btn-secundary">
                     <div class="item-btn-secundary">
