--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </ul>
             <div class="container-btn-secundary">
                 <div class="item-btn-secundary">
-                    <a href="#contact" class="btn-secundary">Get Started
+                    <a href="#contact" class="btn-secundary">Contact me
                         <span class="link material-symbols-outlined">
                             arrow_outward
                         </span>
@@ -76,8 +76,8 @@
             <div class="col-lg-6">
                 <!-- Mashead text and app badges-->
                 <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                    <h1 class="fw-bolder titles mb-2">Empower your team with an expert <span class="mod-titles">graphic designer!</span></h1>
-                    <p class="lead fw-normal text-white-50 mb-4">Looking for a creative and dynamic professional to empower your team? Complete the form below and let's explore how I can contribute to your company's success with designs that capture attention and increase conversion.</p>
+                    <h1 class="fw-bolder titles mb-2">I'm Juan Salgado <span class="mod-titles">Graphic Designer!</span></h1>
+                    <p class="lead fw-normal text-white-50 mb-4">Looking for a creative and dynamic professional to empower your team? </p>
                     <div class="d-flex flex-column flex-lg-row align-items-center">
                         <div class="item-btn-primary">
                             <a href="#contact" class="btn-primary">Let's Connect
@@ -140,7 +140,7 @@
                     I'm a passionate Graphic Designer specialized in creating visual content that increases the visibility and engagement of brands. 
                     I use advanced tools and innovative techniques to transform ideas into attractive and functional projects, ensuring memorable and user-centric results.
                     <br><br>
-                    My journey into visual design began five years ago. Since then, I've been on a continuous quest to refine my skills and stay at the forefront of design trends and technologies. 
+                    My journey into visual design began four years ago. Since then, I've been on a continuous quest to refine my skills and stay at the forefront of design trends and technologies. 
                     I find immense satisfaction in translating concepts and client goals into captivating web solutions that not only look fantastic but also perform seamlessly. 
                     <br><br>
                     🚀 As a designer, my experience spans the entire design process. I specialize in:
@@ -264,23 +264,25 @@
 
         <!--card seccion tools-->
 
-      <div class="container-card-tools">
-    <div class="item-card-img">
-        <img src="assets/img/work-02.jpg" width="100%" alt="Imagen de nuestros amigos y socios">
-    </div>
-    <div class="item-card-tools">
-        <h2 class="mod-titles">
-            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
-                class="bi bi-person-workspace" viewBox="0 0 16 16">
-                <path d="M4 16s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-5.95a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5" />
-                <path d="M2 1a2 2 0 0 0-2 2v9.5A1.5 1.5 0 0 0 1.5 14h.653a5.4 5.4 0 0 1 1.066-2H1V3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v9h-2.219c.554.654.89 1.373 1.066 2h.653a1.5 1.5 0 0 0 1.5-1.5V3a2 2 0 0 0-2-2z" />
-            </svg>
-            Our friends & partners
-        </h2>
-        <p class="lead fw-normal parraphs-card mb-0">Some brands that’ve tasted the goodness. You might’ve
-            heard of some of these.</p>
-    </div>
-</div>
+      <div class="container-ppl">
+        <div class="container-card-tools">
+            <div class="item-card-img">
+                <img src="assets/img/work-02.jpg" width="100%" alt="Imagen de nuestros amigos y socios">
+            </div>
+            <div class="item-card-tools">
+                <h2 class="mod-titles">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
+                        class="bi bi-person-workspace" viewBox="0 0 16 16">
+                        <path d="M4 16s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-5.95a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5" />
+                        <path d="M2 1a2 2 0 0 0-2 2v9.5A1.5 1.5 0 0 0 1.5 14h.653a5.4 5.4 0 0 1 1.066-2H1V3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v9h-2.219c.554.654.89 1.373 1.066 2h.653a1.5 1.5 0 0 0 1.5-1.5V3a2 2 0 0 0-2-2z" />
+                    </svg>
+                    Our friends & partners
+                </h2>
+                <p class="lead fw-normal parraphs-card mb-0">Some brands that’ve tasted the goodness. You might’ve
+                    heard of some of these.</p>
+            </div>
+        </div>
+      </div>
     </section>
     <!-- Portfolio Grid-->
 <section class="page-section" id="portfolio">
