--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
                             <span class="iconos material-symbols-outlined">brush</span>
                         </div>
                         <h2 class="title-card">Web Design</h2>
-                        <p class="text-card">User interface (UI) and user experience (UX)</p>
-                        <p class="text-card">Website and mobile app design</p>
+                        <p class="text-card">User interface (UI) and user experience (UX).</p>
+                        <p class="text-card">Website and mobile app design.</p>
                     </div>
                 </a>
             </div>
@@ -312,7 +312,7 @@
                         <div class="container-icon">
                             <span class="iconos material-symbols-outlined">storefront</span>
                         </div>
-                        <h2 class="title-card">Marketing and Advertising</h2>
+                        <h2 class="title-card">Marketing and Ads</h2>
                         <p class="text-card">Print and digital media advertising campaigns</p>
                         <p class="text-card">Promotional material design</p>
                     </div>
